--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>social.ai - AI-Powered Social Media Management</title>
     <meta name="description" content="Transform your social media presence with AI-powered content creation and analytics. Connect Instagram, manage posts, and track engagement seamlessly." />
     <meta name="author" content="social.ai" />
@@ -10,11 +11,11 @@
     <meta property="og:title" content="social.ai - AI-Powered Social Media Management" />
     <meta property="og:description" content="Transform your social media presence with AI-powered content creation and analytics. Connect Instagram, manage posts, and track engagement seamlessly." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/hero-social-management.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@socialai" />
+    <meta name="twitter:image" content="/hero-social-management.jpg" />
     
     <!-- Google OAuth -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
